--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>this is heading</h1>
+    <h2>I can push my code in github</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam repellat dolorem soluta ratione non distinctio officiis eius cumque doloribus similique quas animi illo ducimus error iure explicabo, dicta, tempora molestias!</p>
 </body>
 </html>
