--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam repellat dolorem soluta ratione non distinctio officiis eius cumque doloribus similique quas animi illo ducimus error iure explicabo, dicta, tempora molestias!</p>
     <img src="piture1.jpg" alt="">
     <img src="picture2.jpg" alt="">
+    <img src="piture3.jpg" alt="">
 </body>
 </html>
