--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <h1>this is heading</h1>
+    <div>
+        <h3>New Blog</h3>
+        <h5>this is new blog</h5>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium eum, quisquam consequuntur sunt eveniet earum quas, veritatis maiores optio, necessitatibus reprehenderit dolorum suscipit minima dolore recusandae molestiae distinctio deserunt!
+        </p>
+    </div>
     <h2>I can push my code in github</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam repellat dolorem soluta ratione non distinctio officiis eius cumque doloribus similique quas animi illo ducimus error iure explicabo, dicta, tempora molestias!</p>
     <img src="piture1.jpg" alt="">
